feat (UI): ToolBar样式。

--- a/Example/VMImagePicker/zh-Hans.lproj/Localizable.strings
+++ b/Example/VMImagePicker/zh-Hans.lproj/Localizable.strings
@@ -1,7 +1,3 @@
-/* 
-  Localizable.strings
-  VMImagePicker
+/* No comment provided by engineer. */
+"Open" = "打开";
 
-  Created by ItghostFan on 2024/9/6.
-  Copyright © 2024 ItghostFans. All rights reserved.
-*/
